css/css.css
/* Main CSS file */

body {
	height: 100%;
	width: 100%;

	overflow-x: hidden;

	background-color: #424242;
}

.toggle {
	opacity: 0.45;
}


#title {
	text-align: center;
	font-size: 42px;
	font-family: 'Permanent Marker';
}

#loading-screen {
	text-align: center;
	font-size: 16px;
	font-family: 'Permanent Marker';
}

#instructions {
	font-family: 'lato';

	margin-left: auto;
	margin-right: auto;

	width: auto;

	display: block;
	text-align: center;
}

#instructions-text {
	display: inline-block;
	width: 600px;
}

#instructions-text ul {
	text-align: left;
}

#instructions-text li {
	margin-bottom: 3px;
}

#download-div {
	background-color: #505050;

	border-width: 2px;
	border-style: solid;
	border-color: #CCC;
	border-radius: 2px;

	display: inline-block;
	width: 80px;
	height: 130px;
}

#button-div {
	text-align: center;
}

.user-button {
    background-color: #121212; /* Green */

    border-radius: 3px;
    border-color: #121212;
    border-style: solid;

    color: white;
    font-size: 16px;
    text-align: center;
    text-decoration: none;

    display: inline-block;

    width: 200px;

    margin-left: 10px;
    margin-right: 10px;
    padding: 10px 30px;
}

#main-content {
	margin-top: 20px;
	margin-bottom: 20px;

	margin-left: auto;
	margin-right: auto;

	padding-top: 40px;
	padding-left: 80px;

	width: 1080px;
	height: 1400px;

	position: relative;
}

#fixed-background-image {
	position: absolute;
	z-index: -3;
	top: 0;
	left: 0;

	width: 1080px !important;
	height: 1400px !important;
}

hr { 
	display: block;

	margin-top: 0.5em;
	margin-bottom: 0.5em;

	margin-left: 100px;
	margin-right: auto;
	border-style: solid;
	border-width: 0.5px;

	overflow-x: visible; 

	opacity: 0.3;

	width: 700px;
}

.clue-input {
    background-color: rgba(255, 255, 255, 0.4);
    width: 45px;
    position: absolute;
    top: 60px;
    border: 0px solid;
    text-align: center;
    font-family: 'Permanent Marker';
    font-size: 18px;
}

#input-easy {
	left: 450px;
}

#input-medium {
	left: 540px;
}

#input-hard {
	left: 630px;
}

#input-elite {
	left: 720px;
}

#input-master {
	left: 810px;
}

/* BARROWS */
#div-barrows {
	display: inline-block;
	width: 720px;
}

#div-barrows div {
	display: inline-block;
	width: 80px;
	margin-right: 40px;
}


/* BOOKS */
#div-books {
	display: inline-block;
	width: 120px;
	margin-left: 20px; 
}

#div-books div {
	display: inline-block;
}

/* CAPES */
#div-capes {
	display: block;
	width: 920px;
}

#div-capes div {
	display: inline-block;
	vertical-align: top;
}

#achievement {
	width: 520px;

}

#combat {
	width: 40px;
	margin-left: 20px; 
}

#imbued {
	width: 80px;
	margin-left: 20px;
}

#max {
	width: 160px;
	margin-left: 20px;
}

/* CLUES */
#div-clues {
	display: block;
	width: 880px;
	position: relative;
}

#thirdage {
	display: inline-block;
	width: 240px;
}

#gear {
	display: inline-block;
	width: 80px;
	margin-left: 40px; 
}

#milestones {
	display: inline-block;
	width: 500px;

	vertical-align: top;

	margin-top: 40px;
}

#milestones img {
	margin-left: 50px;
}

/* COLLECTIONS */
#div-collections {
	display: inline-block;
	width: 40px;
	vertical-align: top;
	margin-left: 80px;
}


/* DIARIES */
#div-diaries {
	display: inline-block;
}

#div-diaries div {
	margin-left: 40px; 
	display: inline-block;
	width: 160px;
}

/* DRAGON */
#div-dragon {
	display: inline-block;
	width: 200px;
}

#div-dragon div {
	display: inline-block;
	width: 200px;
}

/* DROPS */
#div-drops {
	display: inline-block;
	width: 80px;
	vertical-align: top;
	margin-left: 80px;
}

/* GWD */
#div-gwd {
	display: inline-block;
	width: 520px;
}

#div-gwd div {
	display: inline-block;
	width: 80px;
	margin-right: 40px;
}

#saradomin {
	width: 120px !important;
}

/* HEADS */
#div-heads {
	display: inline-block;
	width: 160px;
}

#div-heads div {
	display: inline-block;
	width: 160px;
}

/* JARS */
#div-jars {
	display: inline-block;
	width: 160px;
	margin-left: 40px;
	margin-right: 120px;
}

/* JEWELLRY */
#div-jewellry {
	display: inline-block;
	width: 160px;
	margin-left: 40px;
}

#div-jewellry div {
	display: inline-block;
	width: 160px;
}

/* MTA */
#div-mta {
	display: inline-block;
	width: 160px;
	margin-top: 40px;
	vertical-align: top;
}

/* OUTFITS */
#div-outfits {
	display: inline-block;
	width: 920px;
}

#div-outfits div {
	margin-right: 40px;
}

#graceful {
	width: 120px;
	display: inline-block;
}

#prospector {
	width: 120px;
	display: inline-block;
}

#farmer {
	width: 120px;
	display: inline-block;
}

#lumberjack {
	width: 80px;
	display: inline-block;
}

#pyromancer {
	width: 120px;
	display: inline-block;
	margin-left: 160px;
	margin-top: 10px;
}

#rogue {
	width: 120px;
	display: inline-block;
}

#void {
	width: 200px;
	display: inline-block;
}

#angler {
	width: 80px;
	display: inline-block;
}

#ba {
	width: 160px;
	display: inline-block;
}

/* PETS */
#div-pets {
	display: inline-block;
	width: 640px;
	margin-left: 80px;
	margin-top: 40px; 
}

#rock_golem {
	margin-left: 120px;
}


/* PVM */
#div-pvm {
	width: 920px;
}

#div-pvm div {
	display: inline-block;
	vertical-align: top;
	margin-right: 40px;
}


#cerberus {
	width: 80px;
}

#corp {
	width: 40px;
}

#dks {
	width: 160px;
}

#granite {
	width: 80px;
}

#slayer {
	width: 280px;
}

#dust_battlestaff {
	margin-left: 40px;
}


#vorkath {
	width: 40px;
}

#wilderness {
	display: inline-block;
	width: 280px;
	margin-top: 40px;
	margin-left: 120px;
}

#ring_of_the_gods {
	margin-left: 40px;
}

#zulrah {
	display: inline-block;
	width: 280px;
	margin-left: 40px;
	margin-top: 40px;
}

#magic_fang {
	margin-left: 40px;
}


/* RAIDS */
#div-raids {
	display: block;
	width: 640px;
	margin-left: 120px;
}

/* SCROLLS */
#div-scrolls {
	display: block;
	width: 400px;
	margin-left: 240px;
	margin-bottom: 40px;
}

#div-scrolls div {
	display: inline-block;
	width: 400px;
}


/* SKILLING */
#div-skilling {
	display: block;
	width: 90%;
}

#div-skilling div {
	display: inline-block;
	width: 300px;
}

.noselect {
	-webkit-touch-callout: none; 
	-webkit-user-select: none; 
	-khtml-user-select: none; 
	-moz-user-select: none; 
	-ms-user-select: none; 
	user-select: none; 
}

.default-hidden {
	display: none
}

footer {
	font-family: Lato;
	font-size: 12px;
	display: inline-block;
	width: 100%;
	text-align: center;
	color: #DDDDDD;
}

footer p {
	display: inline-block;
	width: 490px;
}

#thats-me {
	width: 100%;
	font-size: 14px;
}

#thats-them {
	margin-right: 40px; 
}

#thats-all {
	margin-left: 40px;
}

footer a:link {color:#BBBBFF;}
footer a:visited {color:#BBBBFF;} 
footer a:hover {color:#BBBBFF;} 

